--- a/src/app/features/feature-portfolio/components/testimonial-section/testimonial-section.component.scss
+++ b/src/app/features/feature-portfolio/components/testimonial-section/testimonial-section.component.scss
@@ -223,6 +223,7 @@
                     }
 
                     .hero-name{
+                        text-align: left;
 
                         h5{
                             font-size: 18px;
