--- a/src/app/features/feature-portfolio/components/about/achievement-section/achievement-section.component.html
+++ b/src/app/features/feature-portfolio/components/about/achievement-section/achievement-section.component.html
@@ -3,54 +3,12 @@
   <h1>Discover My Awards</h1>
 
   <div class="achievement-container">
-    <div class="achievement-item">
+    <div class="achievement-item" *ngFor="let achievement of achievements">
       <div class="item-description">
-          <p>2022</p>
-          <h4>The Art & Design 2022</h4>
+          <p>{{ achievement.year }}</p>
+          <h4>{{ achievement.title }}</h4>
           <hr>
-          <p>1 st Winner</p>
-      </div>
-
-      <div class="item-icon">
-         <mat-icon svgIcon="magic-wand-icon"></mat-icon>
-         <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
-      </div>
-    </div>
-
-    <div class="achievement-item">
-      <div class="item-description">
-          <p>2022</p>
-          <h4>The Art & Design 2022</h4>
-          <hr>
-          <p>1 st Winner</p>
-      </div>
-
-      <div class="item-icon">
-         <mat-icon svgIcon="magic-wand-icon"></mat-icon>
-         <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
-      </div>
-    </div>
-    
-    <div class="achievement-item">
-      <div class="item-description">
-          <p>2022</p>
-          <h4>The Art & Design 2022</h4>
-          <hr>
-          <p>1 st Winner</p>
-      </div>
-
-      <div class="item-icon">
-         <mat-icon svgIcon="magic-wand-icon"></mat-icon>
-         <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
-      </div>
-    </div>
-
-    <div class="achievement-item">
-      <div class="item-description">
-          <p>2022</p>
-          <h4>The Art & Design 2022</h4>
-          <hr>
-          <p>1 st Winner</p>
+          <p>{{ achievement.description }}</p>
       </div>
 
       <div class="item-icon">
