--- a/src/app/features/feature-portfolio/components/testimonial-section/testimonial-section.component.scss
+++ b/src/app/features/feature-portfolio/components/testimonial-section/testimonial-section.component.scss
@@ -142,7 +142,8 @@
               }
 
               &:hover{       
-                cursor: pointer;    
+                cursor: pointer;   
+                color: var(--cream-500); 
               }
         }
 
