--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -14,74 +14,34 @@
   &-link {
     display: flex;
     align-items: center;
+    width: 70%;
 
     .logo {
       margin-right: 100px;
     }
 
     .navbar-link-items {
+      display: flex;
+      justify-content: space-between;
+      width: 60%;
 
-      a {
-        float: left;
-        text-decoration: none;
+      .navbar-buttons{
+        background-color: transparent;
+        border: none;
         color: var(--white);
-        padding: 2px 20px;
-      }
+        font-size: 18px;
+        font-family: var(--kanit-font-family);
+        font-weight: 200;
 
-      a:hover {
-        color: var(--cream-500);
-      }
-
-      a:focus {
-        color: var(--cream-500);
-      }
-
-      span {
-        margin-left: 10px;
-      }
-
-      a:last-child {
-        &:hover {
-          cursor: pointer;
+        &:hover{
+          color: var(--cream-500);
         }
 
-        nav {
-          padding-top: 5px;
-          color: white;
-
-          .dropdown-content {
-            position: absolute;
-            display: none;
-            background-color: #f1f1f1;
-            min-width: 160px; /* Set width */
-            box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-          }
+        &:focus{
+          color: var(--cream-500);
         }
-      }
 
-      a:last-child {
-        :hover {
-          cursor: pointer;
-          .dropdown-content {
-            display: grid; /* Show dropdown on hover */
-            //margin-top: 30px;
-            margin-left: -45px;
-
-            li {
-              margin-top: 30px;
-
-              a {
-                color: var(--body-text-color);
-
-                &:hover {
-                  color: var(--cream-500);
-                  background-color: var(--dark-grey-500);
-                }
-              }
-            }
-          }
-        }
-      }
+      }  
     }
 
     .navbar-link-items-mobile{
