--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,4 @@
 @import './partials/index';
 
 @import "../../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import "../../node_modules/bootstrap/dist/css/bootstrap.min.css";
