--- a/src/app/features/feature-portfolio/components/portfolio-section/portfolio-section.component.html
+++ b/src/app/features/feature-portfolio/components/portfolio-section/portfolio-section.component.html
@@ -15,14 +15,14 @@
       <div class="work-item">
         <img src="assets/images/work-1.jpg">
         <div class="inner-work-item">
-          <h3>Electronics eCommerce</h3>
+          <h3>Admin Dashboard</h3>
           <p>Web Development</p>
        </div>
       </div>
       <div class="work-item">
         <img src="assets/images/work-2.jpg">
         <div class="inner-work-item">
-          <h3>Electronics eCommerce</h3>
+          <h3>Photo Gallery</h3>
           <p>Web Development</p>
        </div>
       </div>
@@ -33,21 +33,21 @@
       <div class="work-item">
         <img src="assets/images/work-3.jpg">
         <div class="inner-work-item">
-          <h3>Electronics eCommerce</h3>
+          <h3>Multipurpose eCommerce</h3>
           <p>Web Development</p>
        </div>
       </div>
       <div class="work-item">
         <img src="assets/images/work-4.jpg">
         <div class="inner-work-item">
-          <h3>Electronics eCommerce</h3>
+          <h3>Food Delivery App</h3>
           <p>Web Development</p>
        </div>
       </div>
       <div class="work-item custom">
         <img src="assets/images/work-5.jpg">
         <div class="inner-work-item custom-inner-work-item">
-          <h3>Electronics eCommerce</h3>
+          <h3>Work Progress Tracker</h3>
           <p>Web Development</p>
        </div>
       </div>
