--- a/src/app/features/feature-portfolio/components/resume/resume-awards-section/resume-awards-section.component.scss
+++ b/src/app/features/feature-portfolio/components/resume/resume-awards-section/resume-awards-section.component.scss
@@ -48,6 +48,10 @@
                 }
             }
         }
+
+        .award-item-mobile{
+            display: none;
+        }
     }
 
 
@@ -64,6 +68,7 @@
             width: 160px;
             height: 40px;
             display: flex;
+            align-items: center;
 
             mat-icon{
                 width: 18px;
@@ -112,6 +117,10 @@
             row-gap: 20px;
     
             .award-item{
+                display: none;
+            }
+
+            .award-item-mobile{
                 display: grid;
                 padding: 50px 40px 30px 40px;
                 row-gap: 10px;
@@ -161,42 +170,52 @@
             padding-top: 60px;
             display: flex;
             justify-content: space-between;
-            //row-gap: 20px;
+            align-content: center;
             
-            span{
-                display: none;
-            }
-    
-            button{
+            .slide-button{
                 font-size: 18px;
                 color: var(--dark-grey-100);
                 background-color: transparent;
                 border: none;
-                width: 80px;
+                width: 160px;
                 height: 40px;
+                display: flex;
+                align-items: center;
     
                 mat-icon{
-                  margin-left: -10px;
-                  width: 20px;
-                  height: 20px;
+                    width: 18px;
+                    height: 18px;
+                    margin-left: -10px;
+                }
+    
+                span{
+                     margin-left: 15px;
+                     display: none;
                 }
             }
     
-            button:hover{
-                border-radius: none;
-                background-color: transparent;
+            .second-slide-button{
+                justify-content: flex-end;
+
+                span{
+                    margin-right: 20px;
+                    display: none;
+                }
             }
     
             .progress-bar-container{
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                width: 50%;
-
+                color: var(--white);
+                width: 40%; 
+    
                 mat-progress-bar{
-                    margin: 0px 10px;
+                    margin-left: 10px;
+                    margin-right: 10px;
                 }
             }
+         
         }
     }
 }
