--- a/src/app/features/feature-portfolio/components/hero-section/hero-section.component.scss
+++ b/src/app/features/feature-portfolio/components/hero-section/hero-section.component.scss
@@ -97,16 +97,11 @@
   }
 
   .image {
-    width: 50%;
+    width: 50rem;
+    height: 50rem;
     position: absolute;
     top: 170px;
     right: 0px;
-
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: fill;
-    }
   }
 }
 
@@ -177,10 +172,9 @@
     }
 
     .image {
-      position: absolute;
-      top: 50px;
-      object-fit: fill;
-      width: 100%;
+      width: 30rem;
+      height: 30rem;
+      top: 60px;
     }
   }
 }
