--- a/src/app/features/feature-portfolio/components/resume/resume-awards-section/resume-awards-section.component.html
+++ b/src/app/features/feature-portfolio/components/resume/resume-awards-section/resume-awards-section.component.html
@@ -14,6 +14,18 @@
     </div>
   </ng-container>
 
+  <ng-container *ngFor="let award of awards; let i = index">
+    <div class="award-item-mobile" *ngIf="i === currentSlide">
+      <h4>{{ award.title }}</h4>
+      <p>{{ award.description }}</p>
+      <div class="icon-section">
+        <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
+        <mat-icon svgIcon="magic-wand-icon"></mat-icon>
+        <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
+      </div>
+    </div>
+  </ng-container>
+
     <!-- <div class="award-item">
   <h4>The Art & Design 2022</h4>
   <p>1 st Winner</p>
