--- a/src/app/features/feature-portfolio/components/service-section/service-section.component.scss
+++ b/src/app/features/feature-portfolio/components/service-section/service-section.component.scss
@@ -26,15 +26,14 @@
     .expertise-area-item {
       width: 100%;
       background-color: var(--dark-grey-500);
-      margin: 10px;
-      padding: 80px;
+      padding: 60px 80px;
 
       .item-count {
         display: flex;
         justify-content: space-between;
 
         h1 {
-          color: var(--cream-500);
+          color: var(--white);
           text-align: start;
           font-size: 18px;
         }
@@ -42,12 +41,12 @@
         mat-icon {
           width: 50px;
           height: 50px;
-          color: var(--cream-500);
+          color: var(--white);
         }
       }
 
       h1 {
-        color: var(--cream-500);
+        color: var(--white);
         margin-top: 20px;
         margin-bottom: 20px;
         font-size: 24px;
@@ -55,16 +54,44 @@
       }
 
       .line {
-        width: 50%;
+        width: 15%;
         height: 2px;
-        background-color: var(--cream-500);
+        background-color: var(--white);
         margin-bottom: 20px;
       }
 
       p {
-        color: white;
+        color: var(--white);
         font-size: 18px;
         font-weight: 200;
+        line-height: 25px;
+      }
+
+      &:hover{
+        cursor: pointer;
+
+        .item-count {
+          h1 {
+            color: var(--cream-500);
+            text-align: start;
+            font-size: 18px;
+          }
+  
+          mat-icon {
+            width: 50px;
+            height: 50px;
+            color: var(--cream-500);
+          }
+        }
+
+        h1 {
+          color: var(--cream-500);
+        }
+
+        .line {
+          width: 50%;
+          background-color: var(--cream-500);
+        }
       }
     }
   }
@@ -98,12 +125,6 @@
           margin-top: 20px;
           margin-bottom: 20px;
           font-size: 24px;
-        }
-
-        .line {
-          width: 50%;
-          height: 2px;
-          margin-bottom: 20px;
         }
 
         p {
