--- a/src/app/features/feature-portfolio/components/hero-section/hero-section.component.scss
+++ b/src/app/features/feature-portfolio/components/hero-section/hero-section.component.scss
@@ -102,6 +102,12 @@
     position: absolute;
     top: 170px;
     right: 0px;
+
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: fill;
+    }
   }
 }
 
