--- a/src/app/features/feature-portfolio/components/resume-section/resume-section.component.scss
+++ b/src/app/features/feature-portfolio/components/resume-section/resume-section.component.scss
@@ -79,6 +79,10 @@
     }
 }
 
+.resume-focused-menu{
+    color: var(--cream-500) !important;
+}
+
 @media screen and (max-width: 767px) {
    
     .heading-container{
