--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -35,6 +35,7 @@
 
         &:hover{
           color: var(--cream-500);
+          cursor: pointer;
         }
 
         &:focus{
@@ -218,6 +219,9 @@
   display: block !important;
 }
 
+.focused-menu{
+  color: var(--cream-500) !important;
+}
 
 @media screen and (max-width: 767px) {
  
