--- a/src/app/features/feature-portfolio/components/hero-section/hero-section.component.scss
+++ b/src/app/features/feature-portfolio/components/hero-section/hero-section.component.scss
@@ -78,11 +78,14 @@
         font-family: var(--kanit-font-family);
         font-size: 18px;
         font-weight: 300;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         mat-icon {
           width: 20px;
           height: 20px;
-          margin-top: -10px;
+          margin-left: 10px;
         }
 
         &:hover {
