--- a/src/styles/partials/_page.scss
+++ b/src/styles/partials/_page.scss
@@ -34,6 +34,24 @@
     height: 25px !important;
 }
 
+
+
+body::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track {
+    background: var(--background);        /* color of the tracking area */
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background-color: var(--cream-500);    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    //border: 3px solid orange;  /* creates padding around scroll thumb */
+  }
+
+
+
 @media screen and (min-width: 767px) {
  
     .mat-menu-panel{
